<resources>
    <string name="app_name">The Inventory App</string>
    <string name="empty_text">Please add items!</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="add_photo">Choose a great photo!</string>
    <string name="change_photo">Click to change photo</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="add_product_title">Add Product</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="unsaved_changes_message">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="delete_dialog_message">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error_saving_prod">Error saving product</string>
    <string name="prod_saved">Product saved</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="intentType">image/*</string>
    <string name="selectPicture">Select Picture</string>
    <string name="productNameReq">Product name required</string>
    <string name="productPicReq">Product picture required</string>
    <string name="quantityReq">Product quantity required</string>
    <string name="dummyDataName">Nerf N-Strike</string>
    <string name="dummyDataPrice">39</string>
    <!-- todo -->
    <string name="dummyDataPicUri">android.resource://com.example.gismo.theinventoryapp/drawable/nerf_gun</string>
    <string name="dummyDataSupplierName">Gismo</string>
    <string name="dummyDataSupplierEmail">gismo8@gmail.com</string>
    <string name="hintName">Name</string>
    <string name="hintPrice">Price in €</string>
    <string name="currency">€ </string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="availableProduct">pieces available</string>
    <string name="orderMore">Order More</string>
    <string name="newOrder">New Order</string>
    <string name="supplierName">Supplier Name</string>
    <string name="supplierEmail">Supplier E-mail</string>
    <string name="hintSupplierName">Supplier Name</string>
    <string name="hintSupplierEmail">supplier@example.com</string>
    <string name="supplierNameReq">Supplier name required</string>
    <string name="supplierEmailReq">Supplier email required</string>
    <string name="productPriceReq">Product price required</string>
    <string name="soldOut">Item out of stock</string>
    <string name="noLessQuantity">Less than zero? :)</string>
    <string name="buy_now">BUY\nNOW!</string>
</resources>
